--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -2,14 +2,23 @@
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
     <div class="form-group">
-        <input type="text" class="form-control" formControlName='username' placeholder="Username">
+        <label class="control-label" style="margin-right: 10px;">I am a: </label>
+        <label class="radio-inline">
+            <input type="radio" value='male' formControlName='gender'>Male
+        </label>
+        <label class="radio-inline">
+            <input type="radio" value='female' formControlName='gender' class="ml-3">Female
+        </label>
     </div>
-    <div class="form-group">
-        <input type="password" class="form-control" formControlName='password' placeholder="Password">
-    </div>
-    <div class="form-group">
-        <input type="password" class="form-control" formControlName='confirmPassword' placeholder="ConfirmPassword">
-    </div>
+    <app-text-input [formControl]='registerForm.controls["username"]' [label]='"Username"'></app-text-input>
+    <app-text-input [formControl]='registerForm.controls["knownAs"]' [label]='"Known As"'></app-text-input>
+    <app-text-input [formControl]='registerForm.controls["dateOfBirth"]' [label]='"Date Of Birth"'></app-text-input>
+    <app-text-input [formControl]='registerForm.controls["city"]' [label]='"City"'></app-text-input>
+    <app-text-input [formControl]='registerForm.controls["country"]' [label]='"Country"'></app-text-input>
+    <app-text-input [formControl]='registerForm.controls["password"]' [label]='"Password"' [type]='"password"'>
+    </app-text-input>
+    <app-text-input [formControl]='registerForm.controls["confirmPassword"]' [label]='"Confirm Password"'
+        [type]='"password"'></app-text-input>
     <div class="form-group text-center">
         <button class="btn btn-success mr-2" type="submit">Register</button>
         <button class="btn btn-default mr-2" (click)="cancel()" type="button">Cancel</button>
