added sort functionality

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -44,8 +44,8 @@
             <tab heading='Photos'>
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery>
             </tab>
-            <tab heading='Messges'>
-                <p>Messges will go here</p>
+            <tab heading='Messages'>
+                <p>Messages will go here</p>
             </tab>
         </tabset>
     </div>
