--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -1,13 +1,13 @@
 <div class="row mb-4">
     <div class="btn-group" name='container'>
         <button class="btn btn-primary" btnRadio='Unread' [(ngModel)]="container" (click)="loadMessages()">
-            <i class="fa fa-envelope">Unread</i>
+            <i class="fa fa-envelope"></i> Unread
         </button>
         <button class="btn btn-primary" btnRadio='Inbox' [(ngModel)]="container" (click)="loadMessages()">
-            <i class="fa fa-envelope-open">Inbox</i>
+            <i class="fa fa-envelope-open"></i> Inbox
         </button>
         <button class="btn btn-primary" btnRadio='Outbox' [(ngModel)]="container" (click)="loadMessages()">
-            <i class="fa fa-paper-plane">Outbox</i>
+            <i class="fa fa-paper-plane"></i> Outbox
         </button>
     </div>
 </div>
@@ -15,12 +15,12 @@
     <h3>No messages</h3>
 </div>
 <div class="row" *ngIf="messages?.length > 0">
-    <table class="table table-hover" style="cursor:pointer">
+    <table class="table table-hover" style="cursor: pointer">
         <tr>
             <th style="width: 40%">Message</th>
             <th style="width: 20%">From / To</th>
-            <th style="width: 20%">Send /Received</th>
-            <th style="width: 20%">Message</th>
+            <th style="width: 20%">Sent / Received</th>
+            <th style="width: 20%"></th>
         </tr>
         <tr *ngFor="let message of messages" routerLink='{{container === "Outbox" 
                 ? "/members/" + message.recipientUsername 
@@ -40,7 +40,7 @@
             </td>
             <td>{{message.messageSent | timeago}}</td>
             <td>
-                <button class="btn btn-danger">Delete</button>
+                <button class='btn btn-danger'>Delete</button>
             </td>
         </tr>
     </table>
