--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -31,11 +31,14 @@
         </ul>
     </div>
     <div class="card-footer">
-        <div class="input-group">
-            <input type="text" class="form-control input-sm" placeholder="Send a private message">
-            <div class="input-group-append">
-                <button class="btn btn-primary" type="submit">Send</button>
+        <form #messageForm="ngForm" (ngSubmit)="sendMessage()" autocomplete="off">
+            <div class="input-group">
+                <input name="messageContent" required [(ngModel)]="messageContent" type="text"
+                    class="form-control input-sm" placeholder="Send a private message">
+                <div class="input-group-append">
+                    <button [disabled]="!messageForm.valid" class="btn btn-primary" type="submit">Send</button>
+                </div>
             </div>
-        </div>
+        </form>
     </div>
 </div>
