--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-4">
         <div class="card">
-            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
+            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" 
                 class="card-img-top img-thumbnail">
             <div class="card-body">
-                <div class="mb-2" *ngIf="(presence.onlineUsers$ | async).includes(member.username)">
-                    <i class="fa fa-user-circle text-success">Online now</i>
+                <div class="mb-2" *ngIf="(presence.onlineUsers$ | async).includes(member.username)" >
+                    <i class="fa fa-user-circle text-success"></i> Online now
                 </div>
                 <div>
                     <strong>Location:</strong>
@@ -46,7 +46,7 @@
                 <p>{{member.interests}}</p>
             </tab>
             <tab heading='Photos' (selectTab)="onTabActivated($event)">
-                <ngx-gallery [options]="galleryOptions" [images]="galleryImages"
+                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" 
                     style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
             <tab heading='Messages' (selectTab)="onTabActivated($event)">
