--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="col-8">
         <div class="alert alert-info" *ngIf="editForm.dirty">
-            <strong>Information: </strong> You have made changes. Any unsaved changes will be lost.
+            <strong>Information: </strong> You have made changes. Any unsaved changes will be lost
         </div>
     </div>
     <div class="col-4">
@@ -26,7 +26,7 @@
                 </div>
                 <div>
                     <strong>Member since:</strong>
-                    <p>{{member.created |date: 'dd MMM yyyy'}}</p>
+                    <p>{{member.created | date: 'dd MMM yyyy'}}</p>
                 </div>
             </div>
             <div class="card-footer">
@@ -47,7 +47,7 @@
                         rows="6"></textarea>
                     <h4 class="mt-2">Interests</h4>
                     <textarea class="form-control" [(ngModel)]="member.interests" name="interests" rows="6"></textarea>
-                    <h4 class="mt-2">Location Details:</h4>
+                    <h4 class="mt-2">Location Details: </h4>
                     <div class="form-inline">
                         <label for="city">City: </label>
                         <input [(ngModel)]="member.city" type="text" name="city" class="form-control mx-2">
@@ -61,3 +61,4 @@
             </tab>
         </tabset>
     </div>
+</div>
