--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,10 +1,9 @@
 <div class="card">
-    <div class="card-body">
+    <div class="card-body" #scrollMe style="overflow: scroll; height: 535;" [scrollTop]="scrollMe.scrollHeight">
         <div *ngIf="(messageService.messageThreadSource$ | async)?.length === 0">
             No messages yet... say hi by using the message box below
         </div>
-        <ul #scrollMe style="overflow: scroll; height: 500px;" [scrollTop]="scrollMe.scrollHeight"
-            *ngIf="(messageService.messageThreadSource$ | async).length > 0" class="chat">
+        <ul *ngIf="(messageService.messageThreadSource$ | async).length > 0" class="chat">
             <li *ngFor="let message of (messageService.messageThreadSource$ | async)">
                 <div>
                     <span class="chat-img float-right">
@@ -37,7 +36,9 @@
                 <input name="messageContent" required [(ngModel)]="messageContent" type="text"
                     class="form-control input-sm" placeholder="Send a private message">
                 <div class="input-group-append">
-                    <button [disabled]="!messageForm.valid" class="btn btn-primary" type="submit">Send</button>
+                    <button [disabled]="!messageForm.valid || loading" class="btn btn-primary" type="submit">Send
+                        <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
+                    </button>
                 </div>
             </div>
         </form>
